--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     </footer>
 
 </body>
+
+<script src="array.js"></script>
+<script src="saveLS.js"></script>
 <script src="script.js"></script>
 <script src="domscript.js"></script>
 <script src="actions.js"></script>
