--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <header>
         <div class="first_header_block">
-            <div class="empty"></div>
+            <button class="home_button">
+                <i id="home" class="material-icons md-36">home</i>
+            </button>
             <img id="logo" src="logo.gif">
             <div class="logout_block">
             </div>
@@ -45,7 +47,7 @@
 </body>
 
 <script src="array.js"></script>
-<script src="saveLS.js"></script>
+<script src="arrayLS.js"></script>
 <script src="script.js"></script>
 <script src="domscript.js"></script>
 <script src="actions.js"></script>
