--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="first_header_block">
-            <button class="home_button">
+            <button class="home_button" title="home page">
                 <i id="home" class="material-icons md-36">home</i>
             </button>
             <img id="logo" src="logo.gif">
