ls + actions, fixed validation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="components.css">
-
+    <link rel="icon" href="icon.ico"> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arizonia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
