--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 </body>
 
-<script src="array.js"></script>
 <script src="arrayLS.js"></script>
+<script src="array.json"></script>
 <script src="script.js"></script>
 <script src="domscript.js"></script>
 <script src="actions.js"></script>
